@@ -2037,17 +2037,47 @@ sub _update_page {
 } # _update_page
 
 our $_taintbrush;
+
+# This is lifted wholesale from Test::Taint
 sub _taintedness {
-    if ( not defined $_taintbrush ) {
-        my $file = $0;
-        open( my $fh, '<', $file ) or die "Can't open $file: $!";
-        sysread( $fh, $_taintbrush, 1 ) or die "Can't read from $file: $!";
-        $_taintbrush = substr( $_taintbrush, 0, 0 );
-        close $fh;
+    return $_taintbrush if defined $_taintbrush;
+
+    # Somehow we need to get some taintedness into our $_taintbrush.
+    # Let's try the easy way first. Either of these should be
+    # tainted, unless somebody has untainted them, so this
+    # will almost always work on the first try.
+    # (Unless, of course, taint checking has been turned off!)
+    $_taintbrush = substr("$0$^X", 0, 0);
+    return $_taintbrush if _is_tainted( $_taintbrush );
+
+    # Let's try again. Maybe somebody cleaned those.
+    $_taintbrush = substr(join("", @ARGV, %ENV), 0, 0);
+    return $_taintbrush if _is_tainted( $_taintbrush );
+
+    # If those don't work, go try to open some file from some unsafe
+    # source and get data from them.  That data is tainted.
+    # (Yes, even reading from /dev/null works!)
+    for my $filename ( qw(/dev/null / . ..), values %INC, $0, $^X ) {
+        if ( open my $fh, '<', $filename ) {
+            my $data;
+            if ( defined sysread $fh, $data, 1 ) {
+                $_taintbrush = substr( $data, 0, 0 );
+                last if _is_tainted( $_taintbrush );
+            }
+        }
     }
+
+    # Sanity check
+    die "Our taintbrush should have zero length!" if length $_taintbrush;
 
     return $_taintbrush;
 }
+
+sub _is_tainted {
+    no warnings qw(void uninitialized);
+
+    return !eval { join('', shift), kill 0; 1 };
+} # _is_tainted
 
 
 =head2 $mech->_modify_request( $req )
